--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,21 +10,30 @@ services:
     ports:
       - "443:443"
     restart: always
-    # depends_on:
-    #   - wordpress
+    depends_on:
+      - wordpress
+    volumes:
+      - wordpress_vol:/var/www/html/wordpress
     networks:
       - inception_network
+    env_file:
+      - .env
 
-  # wordpress:
-  #   build: ./requirements/wordpress
-  #   container_name: wordpress
-  #   image: wordpress
-  #   depends_on:
-  #     - mysql
-  #   ports:
-  #     - "9000:9000"
-  #   networks:
-  #     - inception_network
+  wordpress:
+    build: ./requirements/wordpress
+    container_name: wordpress
+    image: wordpress
+    depends_on:
+      - mysql
+    ports:
+      - "9000:9000"
+    volumes:
+      - wordpress_vol:/var/www/html/wordpress
+    networks:
+      - inception_network
+    restart: always
+    env_file:
+      - .env
   
   mysql:
     build: ./requirements/mariadb
@@ -36,8 +45,29 @@ services:
       MYSQL_USER: user_name
       MYSQL_PASSWORD: user_pass
     restart: always
-    ports:
-      - "3306:3306"
+    volumes:
+      - mysql_vol:/var/lib/mysql
+    networks:
+      - inception_network
+    env_file:
+      - .env
+
+volumes:
+  mysql_vol:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/falmeida/data/database
+      o: bind
+    name: mysql_vol
+  
+  wordpress_vol:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/falmeida/data/wordpress
+      o: bind
+    name: wordpress_vol
 
 networks:
   inception_network:
