--- a/srcs/.env
+++ b/srcs/.env
@@ -3,7 +3,7 @@ CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
 
 # WORDPRESS SETUP
 WP_TITLE=Falmeida
-WP_ADMIN_USR=falmeida42
+WP_ADMIN_USR=falmeida
 WP_ADMIN_PWD=1234
 WP_ADMIN_EMAIL=falemida.42.fr@gmail.com
 WP_USR=falmeida
