--- a/srcs/requirements/mariadb/tools/server.cnf
+++ b/srcs/requirements/mariadb/tools/server.cnf
@@ -17,6 +17,8 @@ query_cache_size        = 16M
 
 log_error = /var/log/mysql/error.log
 
+expire_logs_days        = 10
+
 character-set-server  = utf8mb4
 collation-server      = utf8mb4_general_ci
 
