--- a/srcs/.env
+++ b/srcs/.env
@@ -11,9 +11,11 @@ WP_EMAIL=falmeida@42.com
 WP_PWD=123
 
 # MYSQL SETUP
+db_root_pwd=123
 db_name=wordpress
 db_user=falmeida
 db_pwd=secret
+db_host=mariadb
 
 
 ftp_user=falmeida
