--- a/srcs/.env
+++ b/srcs/.env
@@ -2,7 +2,7 @@ DOMAIN_NAME=falmeida.42.fr
 CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
 
 # WORDPRESS SETUP
-WP_TITLE=Falmeida
+WP_TITLE=Inception
 WP_ADMIN_USR=falmeida
 WP_ADMIN_PWD=1234
 WP_ADMIN_EMAIL=falemida.42.fr@gmail.com
