--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,43 +1,59 @@
 FROM debian:buster
 
-WORKDIR /var/www/html
+ARG	WORDPRESS_VERSION=5.8.3
 
-RUN apt-get update \
-    && apt-get upgrade -y \
-    && apt-get install -y wget openssl mariadb-client php php-fpm php-mysqli php-curl php-gd php-xml php-cgi php-http gettext
+RUN apt-get update && apt-get install -y \
+	gettext \
+	php7.3 \
+	php7.3-fpm \
+	php7.3-cli \
+	wget \
+	curl \
+	procps \
+	php7.3-curl \
+	php7.3-mysql \
+	php7.3-mbstring \
+	php7.3-xml \
+	php7.3-gd \
+	sendmail \
+	mariadb-client \
+	gettext-base \
+	&& apt-get clean \
+	&& rm -rf /var/lib/apt/lists/* \
+	&& mkdir /run/php
 
-RUN apt-get autoremove \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN wget https://wordpress.org/latest.tar.gz \
-    && tar -xvf latest.tar.gz \
-    && rm -rf latest.tar.gz
+# - downloads the wordpress command line interface and
+# - gives execution permission to where it's downloaded at
 
 RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-    && mv wp-cli.phar /usr/local/bin/wp \
-    && chmod +x /usr/local/bin/wp
+	--output-document=/usr/local/bin/wp \
+  && chmod +x /usr/local/bin/wp
 
-COPY ./tools/script.sh /usr/local/bin/script.sh
+RUN mkdir -p /run/php /var/www/html/wordpress \
+  && chmod -R 755 /var/www/html/
 
-RUN chmod +x /usr/local/bin/script.sh
-
+# - add the "wpg" group and user
 RUN addgroup --system wpg \
   && adduser --system wpg
 
-COPY ./conf/www.conf /
-COPY ./conf/wp-config.php /var/www/html/wordpress/wp-config.php
+# - copy the config file to container root as a template file
+COPY ./conf/www.conf /www.conf
 
-RUN rm /var/www/html/wordpress/wp-config-sample.php
-
-RUN mkdir /run/php/ \
-    && touch /run/php/php7.3-fpm.pid
-
-RUN chmod -R 755 /var/www/html/wordpress
-
-RUN rm -rf /etc/php/7.3/fpm/pool.d/www.conf
-
+# - Sets the working directory where I want to download wp core
 WORKDIR /var/www/html/wordpress
 
-ENTRYPOINT ["script.sh"]
+# - downloads wp core
+RUN wp core download --allow-root --version=$WORDPRESS_VERSION
 
-CMD ["php-fpm7.3", "-F"]
+# - copies the entrypoint script
+COPY tools/script.sh /usr/local/bin/
+
+# - sets the execution permission to the entrypoint script
+RUN chmod +x /usr/local/bin/script.sh
+
+# - removes default www.conf
+RUN rm -f /etc/php/7.3/fpm/pool.d/www.conf
+
+ENTRYPOINT [ "script.sh" ]
+
+CMD [ "/usr/sbin/php-fpm7.3", "-F" ]
