--- a/srcs/.env
+++ b/srcs/.env
@@ -6,7 +6,7 @@ WP_TITLE=Inception
 WP_ADMIN_USR=falmeida
 WP_ADMIN_PWD=1234
 WP_ADMIN_EMAIL=falemida.42.fr@gmail.com
-WP_USR=falmeida
+WP_USR=falmeidaa
 WP_EMAIL=falmeida@42.com
 WP_PWD=123
 
