--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,16 +1,20 @@
-FROM debian:buster
+FROM debian:bullseye
 
 RUN apt-get update \
     && apt-get install -y mariadb-server procps \
     && apt-get upgrade -y
+
 RUN rm -rf /var/lib/apt/lists/* \
     && apt-get autoremove
 
-RUN mkdir -p /var/lib/mysql
+RUN mkdir -p /var/lib/mysql /var/run/mysqld \
+    && chown -R mysql:mysql /var/lib/mysql /var/run/mysqld \
+    && chmod 777 /var/run/mysqld
 
-COPY ./tools/server.cnf /etc/mysql/mariadb.conf.d
+EXPOSE 3306
 
 COPY ./tools/script.sh /usr/local/bin/script.sh
+COPY ./tools/50-server.cnf /etc/mysql/mariadb.conf.d
 
 RUN chmod +x /usr/local/bin/script.sh
 
